# tsconcat

./: .gitignore  .pre-commit-config.yaml  .templatesyncignore  README.md  index.html  pyproject.toml  search.js  tsconcat.html
.github/workflows/: docs.yml  publish-pypi.yaml  sync_template.yaml
src/tsconcat/: __init__.py  b2t.py  cli.py  concat.py  main.py  pretreeprint.py  utils.py
tests/: test_utils.py
tsconcat/: b2t.html  b2t.py  b2t_columns.html  cli.html  concat.html  concat.py  main.html  main.py  pretreeprint.html  utils.html  utils.py
